✨ F02 : add layout for page

--- a/posts/mon-troisieme-site/mon-troisieme-site.mdx
+++ b/posts/mon-troisieme-site/mon-troisieme-site.mdx
@@ -1,7 +1,11 @@
 ---
 title: Mon Troisième Site Web - Un Portfolio Interactif
-date: "2023-07-30"
+
+date: "2025-01-28"
+tags: ["parcours", "développeur", "spectacle", "intermittent", "programmation"]
 ---
+
+<div className="prose prose-lg mx-auto">
 
 ## Présentation du Projet
 
@@ -22,3 +26,5 @@ Pour mon troisième projet, j'ai décidé de créer mon portfolio personnel inte
 ## Conclusion
 
 Ce projet m'a permis de combiner créativité et technicité. J'ai appris l'importance de l'équilibre entre esthétique et fonctionnalité, tout en gardant à l'esprit les bonnes pratiques de développement web.
+
+</div>
