✨ F02 : add navigation with category

--- a/posts/mon-deuxieme-site/mon-deuxieme-site.mdx
+++ b/posts/mon-deuxieme-site/mon-deuxieme-site.mdx
@@ -3,6 +3,7 @@ title: "Créer un Site de Recettes avec TanStack Query et Next.js"
 description: "Retour sur la création de mon site de recettes, un projet personnel pour apprendre et maîtriser TanStack Query et Next.js. Découvrez les défis, les choix techniques et les apprentissages."
 date: "2025-01-28"
 tags: ["projet", "développement web", "Next.js", "TanStack Query", "recettes"]
+category: ["poulet", "historiqye", "mmomla"]
 ---
 
 # Créer un Site de Recettes avec TanStack Query et Next.js
