--- a/posts/mon-premier-site/mon-premier-site.mdx
+++ b/posts/mon-premier-site/mon-premier-site.mdx
@@ -3,6 +3,7 @@ title: "Mon Parcours : De l'Intermittent du Spectacle au Développeur Junior"
 description: "Découvrez mon parcours unique, de l'univers du spectacle à celui du développement logiciel. Un voyage riche en apprentissages, en défis et en transformations personnelles."
 date: "2025-01-28"
 tags: ["parcours", "développeur", "spectacle", "intermittent", "programmation"]
+category: ["carrière", "développement", "personnel"]
 ---
 
 <div className="prose prose-lg mx-auto">
