--- a/posts/mon-troisieme-site/mon-troisieme-site.mdx
+++ b/posts/mon-troisieme-site/mon-troisieme-site.mdx
@@ -3,6 +3,7 @@ title: Mon Troisième Site Web - Un Portfolio Interactif
 
 date: "2025-01-28"
 tags: ["parcours", "développeur", "spectacle", "intermittent", "programmation"]
+category: ["chevre", "elise", "jtm"]
 ---
 
 <div className="prose prose-lg mx-auto">
