💄   F02 : 002-monpremiersite add content

--- a/posts/002-monpremiersite/002-monpremiersite.mdx
+++ b/posts/002-monpremiersite/002-monpremiersite.mdx
@@ -6,17 +6,17 @@ tags: ["projet", "React", "styled-components", "développement web", "débutant"
 category: ["premier projet", "apprentissage", "développement"]
 ---
 
-_Mon Premier Site avec React et Styled-Components_
+_Mes premiers pas_
 
-# Introduction
+# Mon Premier Site avec React
+
+<div className="prose prose-base mt-10">
 
 Comme beaucoup de développeurs débutants, j'ai voulu me lancer dans la création de mon premier site web en m’appuyant sur une maquette que j’avais récupérée sur Figma. Mon objectif ? Reproduire fidèlement le design tout en apprenant à utiliser **React** et **styled-components** pour gérer les styles de manière modulaire.
 
 Cependant, ce projet s'est rapidement transformé en une série de défis qui m'ont poussé à revoir mes attentes, notamment sur des aspects comme le **responsive design**, la gestion des **selectors**, et la structure de mon fichier de styles.
 
 Dans cet article, je vais vous partager mon expérience : mes choix, les difficultés rencontrées, et ce que j'en ai appris.
-
-<div className="prose prose-base mt-10">
 
 ## Le Projet : Reproduire une Maquette Figma
 
@@ -30,7 +30,7 @@ Au début, tout semblait facile : j’utilisais React pour structurer mes comp
 
 ## Les Défis Rencontrés
 
-##1. Le Responsive Design : Une Galère Monumentale
+## 1. Le Responsive Design : Une Galère Monumentale
 
 Reproduire la maquette sur un écran desktop était faisable, mais dès qu'il fallait adapter le site pour les petits écrans, ça devenait un casse-tête.
 
@@ -89,8 +89,6 @@ const Button = styled.button`
 `;
 ```
 
-  </div>
-
 ## La Création du Projet
 
 Au fur et à mesure que le projet avançait, les styles prenaient tellement de place que mon fichier faisait plusieurs centaines de lignes pour un seul composant ! C'était démotivant et difficile à maintenir.
@@ -101,6 +99,8 @@ Je ne connaissais pas encore les bonnes pratiques pour organiser mes fichiers. R
 
 - J'avais des fichiers avec un mélange de logique React et de styles CSS.
 - Rien n’était réutilisable, ce qui m’obligeait à copier-coller du code à chaque fois.
+
+ </div>
 
 <div className="prose prose-base mt-16">
 ## Ce Que J'ai Appris
@@ -121,9 +121,11 @@ Plutôt que de travailler le responsive après coup, il vaut mieux le prendre en
 J’ai appris à simplifier mes composants et à éviter d’ajouter trop de détails d’un coup. Parfois, il vaut mieux se concentrer sur une seule fonctionnalité et l’améliorer progressivement.
 
   </div>
-
+<div className="prose prose-base mt-16">
 # Conclusion
 
 Même si ce projet était difficile et parfois frustrant, il m’a beaucoup appris sur les bases du développement web. J’ai compris que le design n’est pas seulement une question de pixels : il s'agit aussi de structure, d’organisation et de réflexion sur l’expérience utilisateur.
 
 Aujourd’hui, je regarde ce premier site avec un mélange de fierté et d’humilité. Il n’est pas parfait, mais il représente une étape importante dans mon apprentissage. Et malgré les galères, je suis motivé à continuer à progresser !
+
+ </div>
