💄  F03: Change the tag at 3 for better style

--- a/posts/001-mesdebuts/001-mesdebuts.mdx
+++ b/posts/001-mesdebuts/001-mesdebuts.mdx
@@ -2,7 +2,7 @@
 title: "Mes débuts en tant que développeur web"
 description: "Retour sur mes premiers pas en développement web, un parcours personnel pour apprendre et maîtriser HTML, CSS et JavaScript. Découvrez les défis et les apprentissages."
 date: "2025-01-28"
-tags: ["projet", "développement web", "HTML", "CSS", "JavaScript"]
+tags: ["projet", "HTML", "CSS"]
 category: "apprentissage"
 ---
 
