--- a/posts/002-monpremiersite/002-monpremiersite.mdx
+++ b/posts/002-monpremiersite/002-monpremiersite.mdx
@@ -2,7 +2,7 @@
 title: "Mon Premier Site avec React et Styled-Components"
 description: "Retour sur la création de mon tout premier site web. J'ai utilisé React et styled-components en me basant sur une maquette Figma. Découvrez les défis rencontrés, notamment le responsive et la gestion des styles."
 date: "2025-01-28"
-tags: ["projet", "React", "styled-components", "développement web", "débutant"]
+tags: ["React", "styled-components", "débutant"]
 category: ["premier projet", "apprentissage", "développement"]
 ---
 
