💄  F03 :modify the structure of our mdx components

--- a/posts/002-monpremiersite/002-monpremiersite.mdx
+++ b/posts/002-monpremiersite/002-monpremiersite.mdx
@@ -6,11 +6,11 @@ tags: ["React", "styled-components", "débutant"]
 category: ["premier projet", "apprentissage", "développement"]
 ---
 
+<div className="prose prose-base dark:prose-invert mt-16">
+
 _Mes premiers pas_
 
 # Mon Premier Site avec React
-
-<div className="prose prose-base mt-10">
 
 Comme beaucoup de développeurs débutants, j'ai voulu me lancer dans la création de mon premier site web en m’appuyant sur une maquette que j’avais récupérée sur Figma. Mon objectif ? Reproduire fidèlement le design tout en apprenant à utiliser **React** et **styled-components** pour gérer les styles de manière modulaire.
 
@@ -23,10 +23,6 @@ Dans cet article, je vais vous partager mon expérience : mes choix, les diffi
 J’avais récupéré une belle maquette sur **Figma**, avec des sections bien définies : un header, une galerie d’images, une section "à propos" et un footer. L'objectif était simple : **reproduire la maquette le plus fidèlement possible**.
 
 Au début, tout semblait facile : j’utilisais React pour structurer mes composants, et j’avais choisi **styled-components** pour encapsuler les styles dans chaque composant. Mais très vite, des problèmes ont commencé à apparaître.
-
-</div>
-
-<div className="prose prose-base mt-16">
 
 ## Les Défis Rencontrés
 
@@ -57,10 +53,6 @@ const GalleryContainer = styled.div`
   }
 `;
 ```
-
-</div>
-
-<div className="prose prose-base mt-16">
 
 Malgré ces efforts, je n’étais jamais satisfait du rendu. Il y avait toujours quelque chose qui clochait : des images mal redimensionnées, des marges incohérentes…
 
@@ -100,9 +92,6 @@ Je ne connaissais pas encore les bonnes pratiques pour organiser mes fichiers. R
 - J'avais des fichiers avec un mélange de logique React et de styles CSS.
 - Rien n’était réutilisable, ce qui m’obligeait à copier-coller du code à chaque fois.
 
- </div>
-
-<div className="prose prose-base mt-16">
 ## Ce Que J'ai Appris
 
 1. **L'Importance d'une Bonne Organisation**
@@ -120,8 +109,6 @@ Plutôt que de travailler le responsive après coup, il vaut mieux le prendre en
 
 J’ai appris à simplifier mes composants et à éviter d’ajouter trop de détails d’un coup. Parfois, il vaut mieux se concentrer sur une seule fonctionnalité et l’améliorer progressivement.
 
-  </div>
-<div className="prose prose-base mt-16">
 # Conclusion
 
 Même si ce projet était difficile et parfois frustrant, il m’a beaucoup appris sur les bases du développement web. J’ai compris que le design n’est pas seulement une question de pixels : il s'agit aussi de structure, d’organisation et de réflexion sur l’expérience utilisateur.
