--- a/posts/001-mesdebuts/001-mesdebuts.mdx
+++ b/posts/001-mesdebuts/001-mesdebuts.mdx
@@ -6,22 +6,20 @@ tags: ["projet", "HTML", "CSS"]
 category: "apprentissage"
 ---
 
+<div className="prose prose-base dark:prose-invert mt-16">
+
 _Mon parcours_
 
 # Une aventure dans le développement web
 
 Mon parcours en tant que développeur web a été une véritable aventure d'apprentissage personnel, débutant avec des vidéos de formation disponibles "from scratch". Dans cet article, je vais évoquer les défis que j'ai dû surmonter, les choix techniques que j'ai effectués, ainsi que les leçons tirées de cette expérience enrichissante.
 
-<div className="prose prose-base mt-10">
 ## Mes débuts en développement web
 
 J'ai commencé mon voyage dans le développement web en visionnant des vidéos de "from scratch" recommandées par un ami, <strong>Maiko</strong>. Au départ, j'ai exploré des ressources gratuites pour assimiler les bases, puis j'ai poursuivi avec des vidéos plus avancées afin d'approfondir mes connaissances. Toutefois, j'ai rapidement réalisé que je peinais à achever un seul exercice sans consulter les solutions proposées.
 
 Malgré ces obstacles, j'ai découvert une forte affinité pour le CSS. J'éprouvais un réel plaisir à concevoir des designs attrayants, ce qui m’a naturellement dirigé vers le développement front-end. J'ai commencé à travailler sur des projets en local, sans les publier, ce qui m'a permis de m'exercer et d'affiner mes compétences.
 
-</div>
-
-<div className="prose prose-base mt-16">
 ## Les défis rencontrés
 
 L'apprentissage des langages HTML, CSS et JavaScript a été semé d'embûches. Assimiler les fondamentaux de HTML pour structurer efficacement le contenu, maîtriser CSS afin de styliser les éléments et concevoir des designs attrayants, ainsi qu'apprendre JavaScript pour intégrer interactivité et fonctionnalités dynamiques, étaient autant d'étapes essentielles à franchir.
@@ -36,10 +34,6 @@ L'apprentissage des langages HTML, CSS et JavaScript a été semé d'embûches. 
   Ajouter de l’interactivité et des fonctionnalités dynamiques pour rendre les applications plus vivantes.
 
 La stylisation avec CSS a également représenté un défi majeur. Apprendre à utiliser les sélecteurs et propriétés CSS pour créer des designs harmonieux, gérer le responsive design pour garantir une expérience utilisateur optimale sur divers appareils, et explorer les animations et transitions CSS pour enrichir l'expérience utilisateur, ont été des compétences cruciales à acquérir.
-
-</div>
-
-<div className="prose prose-base mt-16">
 
 ## En vrai...
 
