✅ F04: Update our mdx

--- a/posts/001-mesdebuts/001-mesdebuts.mdx
+++ b/posts/001-mesdebuts/001-mesdebuts.mdx
@@ -12,13 +12,13 @@ _Mon parcours_
 
 # Une aventure dans le développement web
 
-Mon parcours en tant que développeur web a été une véritable aventure d'apprentissage personnel, débutant avec des vidéos de formation disponibles "from scratch". Dans cet article, je vais évoquer les défis que j'ai dû surmonter, les choix techniques que j'ai effectués, ainsi que les leçons tirées de cette expérience enrichissante.
+Mon parcours en tant que développeur web a été une véritable aventure d'apprentissage personnel, débutant avec des vidéos de ["from scratch"](https://www.youtube.com/c/FromScratchD%C3%A9veloppementWeb). Dans cet article, je vais évoquer les défis que j'ai dû surmonter, les choix techniques que j'ai effectués, ainsi que les leçons tirées de cette expérience enrichissante.
 
 ## Mes débuts en développement web
 
-J'ai commencé mon voyage dans le développement web en visionnant des vidéos de "from scratch" recommandées par un ami, <strong>Maiko</strong>. Au départ, j'ai exploré des ressources gratuites pour assimiler les bases, puis j'ai poursuivi avec des vidéos plus avancées afin d'approfondir mes connaissances. Toutefois, j'ai rapidement réalisé que je peinais à achever un seul exercice sans consulter les solutions proposées.
+J'ai commencé mon voyage dans le développement web en visionnant des vidéos de **From Scratch** recommandées par un ami, **_Maiko_**. Au départ, j'ai exploré des ressources gratuites pour assimiler les bases, puis j'ai poursuivi avec des vidéos plus avancées afin d'approfondir mes connaissances. Toutefois, j'ai rapidement réalisé que je peinais à achever un seul exercice sans consulter les solutions proposées.
 
-Malgré ces obstacles, j'ai découvert une forte affinité pour le CSS. J'éprouvais un réel plaisir à concevoir des designs attrayants, ce qui m’a naturellement dirigé vers le développement front-end. J'ai commencé à travailler sur des projets en local, sans les publier, ce qui m'a permis de m'exercer et d'affiner mes compétences.
+Malgré ces obstacles, j'ai découvert une forte affinité pour le **CSS**. J'éprouvais un réel plaisir à concevoir des designs attrayants, ce qui m’a naturellement dirigé vers le développement front-end. J'ai commencé à travailler sur des projets en local, sans les publier, ce qui m'a permis de m'exercer et d'affiner mes compétences.
 
 ## Les défis rencontrés
 
