--- a/posts/002-monpremiersite/002-monpremiersite.mdx
+++ b/posts/002-monpremiersite/002-monpremiersite.mdx
@@ -26,7 +26,7 @@ Au début, tout semblait facile : j’utilisais React pour structurer mes comp
 
 ## Les Défis Rencontrés
 
-## 1. Le Responsive Design : Une Galère Monumentale
+### 1. Le Responsive Design : Une Galère Monumentale
 
 Reproduire la maquette sur un écran desktop était faisable, mais dès qu'il fallait adapter le site pour les petits écrans, ça devenait un casse-tête.
 
@@ -56,7 +56,7 @@ const GalleryContainer = styled.div`
 
 Malgré ces efforts, je n’étais jamais satisfait du rendu. Il y avait toujours quelque chose qui clochait : des images mal redimensionnées, des marges incohérentes…
 
-## 2. Les Selectors dans Styled-Components : Un Cauchemar
+### 2. Les Selectors dans Styled-Components : Un Cauchemar
 
 Je voulais que chaque composant ait un style unique tout en respectant la structure de la maquette. Mais dès que je devais gérer des interactions (par exemple, hover, focus), le fichier devenait rapidement énorme et illisible.
 
@@ -94,18 +94,18 @@ Je ne connaissais pas encore les bonnes pratiques pour organiser mes fichiers. R
 
 ## Ce Que J'ai Appris
 
-1. **L'Importance d'une Bonne Organisation**
+1. L'Importance d'une Bonne Organisation
 
 J’ai compris qu’il fallait structurer mon code dès le départ pour éviter d’être débordé. Cela inclut :
 
 - Séparer les styles dans des fichiers dédiés.
 - Réutiliser des composants quand c'est possible.
 
-2. **Le Responsive, Ça S'Anticipe**
+2. Le Responsive, Ça S'anticipe
 
 Plutôt que de travailler le responsive après coup, il vaut mieux le prendre en compte dès le début en utilisant une grille bien pensée et en définissant des breakpoints clairs.
 
-3. **La Simplicité Avant Tout**
+3. La Simplicité Avant Tout
 
 J’ai appris à simplifier mes composants et à éviter d’ajouter trop de détails d’un coup. Parfois, il vaut mieux se concentrer sur une seule fonctionnalité et l’améliorer progressivement.
 
