✅ F04: Add a new mdx

--- a/posts/002-monpremiersite/002-monpremiersite.mdx
+++ b/posts/002-monpremiersite/002-monpremiersite.mdx
@@ -1,18 +1,18 @@
 ---
 title: "Mon Premier Site avec React et Styled-Components"
 description: "Retour sur la création de mon tout premier site web. J'ai utilisé React et styled-components en me basant sur une maquette Figma. Découvrez les défis rencontrés, notamment le responsive et la gestion des styles."
-date: "2025-01-28"
+date: "2025-01-30"
 tags: ["React", "styled-components", "débutant"]
 category: ["premier projet", "apprentissage", "développement"]
 ---
-
-<div className="prose prose-base dark:prose-invert mt-16">
 
 _Mes premiers pas_
 
 # Mon Premier Site avec React
 
-Comme beaucoup de développeurs débutants, j'ai voulu me lancer dans la création de mon premier site web en m’appuyant sur une maquette que j’avais récupérée sur Figma. Mon objectif ? Reproduire fidèlement le design tout en apprenant à utiliser **React** et **styled-components** pour gérer les styles de manière modulaire.
+Comme beaucoup de développeurs débutants, j'ai voulu me lancer dans la création de mon premier site web en m’appuyant sur une maquette que j’avais récupérée sur Figma. Mon objectif ?
+
+> Reproduire fidèlement le design tout en apprenant à utiliser **React** et **styled-components** pour gérer les styles de manière modulaire.
 
 Cependant, ce projet s'est rapidement transformé en une série de défis qui m'ont poussé à revoir mes attentes, notamment sur des aspects comme le **responsive design**, la gestion des **selectors**, et la structure de mon fichier de styles.
 
@@ -114,5 +114,3 @@ J’ai appris à simplifier mes composants et à éviter d’ajouter trop de dé
 Même si ce projet était difficile et parfois frustrant, il m’a beaucoup appris sur les bases du développement web. J’ai compris que le design n’est pas seulement une question de pixels : il s'agit aussi de structure, d’organisation et de réflexion sur l’expérience utilisateur.
 
 Aujourd’hui, je regarde ce premier site avec un mélange de fierté et d’humilité. Il n’est pas parfait, mais il représente une étape importante dans mon apprentissage. Et malgré les galères, je suis motivé à continuer à progresser !
-
- </div>
