✅  Add new chapter

--- a/posts/002-monpremiersite/002-monpremiersite.mdx
+++ b/posts/002-monpremiersite/002-monpremiersite.mdx
@@ -3,7 +3,7 @@ title: "Mon Premier Site avec React et Styled-Components"
 description: "Retour sur la création de mon tout premier site web. J'ai utilisé React et styled-components en me basant sur une maquette Figma. Découvrez les défis rencontrés, notamment le responsive et la gestion des styles."
 date: "2025-01-30"
 tags: ["React", "styled-components", "débutant"]
-category: ["premier projet", "apprentissage", "développement"]
+category: "apprentissage"
 ---
 
 _Mes premiers pas_
