--- a/posts/003-ma-solution-au-responsive/003-ma-solution-au-responsive.mdx
+++ b/posts/003-ma-solution-au-responsive/003-ma-solution-au-responsive.mdx
@@ -3,7 +3,7 @@ title: "Ma Solution au Responsive avec React et Tailwind CSS"
 description: "Dans cet article, je partage mon expérience avec React et Tailwind CSS pour créer mon premier site web responsive, avec projets et conseils à l’appui."
 date: "2025-01-31"
 tags: ["React", "Tailwind CSS", "responsive"]
-category: ["responsive", "apprentissage", "développement"]
+category: ["responsive"]
 ---
 
 _Ma Solution (Pour Moi)_
